# splatman

./: .gitignore  CMakeLists.txt  Makefile  NOTES  README  TODO  actor.cc  actor.hh  application.cc  application.hh  board-data.hh  board.cc  board.hh  ghost.cc  ghost.hh  graphics.cc  graphics.hh  main.cc  player.cc  player.hh
src/: actor.cc  actor.hh  application.cc  application.hh  board.cc  board.hh  common.hh  game.cc  game.hh  ghost.cc  ghost.hh  graphics.cc  graphics.hh  main.cc  mode-base.cc  mode-base.hh  new-high-score.cc  new-high-score.hh  player.cc  player.hh  round.cc  round.hh  score-board.cc  score-board.hh  show-scores.cc  show-scores.hh  sounds.cc  sounds.hh  splash-screen.cc  splash-screen.hh
src/audio/: audio-channel.cc  audio-channel.hh  audio-common.hh  audio-exception.cc  audio-exception.hh  audio-noise-oscillator.cc  audio-noise-oscillator.hh  audio-oscillator-base.cc  audio-oscillator-base.hh  audio-pattern.cc  audio-pattern.hh  audio-saw-oscillator.cc  audio-saw-oscillator.hh  audio-service.cc  audio-service.hh  audio-sine-oscillator.cc  audio-sine-oscillator.hh  audio-square-oscillator.cc  audio-square-oscillator.hh  audio-triangle-oscillator.cc  audio-triangle-oscillator.hh  audio.hh
